--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,65 +7,62 @@
   <title>Secret Family Recipes!!!!</title>
   <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/reset.css">
 
 </head>
 
 <body>
- 
-  <header>
-    <img src="img/Secret-Family-Recipes-Logo.png" alt= "logo">
-    <h1>Secret Family Recipes</h1>
-    <nav class="nav">
-        <li><a href="index.html">Home</a></li>
-        <li></li><a href="#">Log In</a></li>
-        <li><a href="#">About Us</a></li>
-    </nav>
-</header>
 
-    <section class= "top-content">
-        <div class= "box-it">
-         <h1>
-          Family Legend
-         </h1>
-         <p class= "recipe"> 
-          Do you have a book of recipes that you are afraid one day you might lose? Do you want
-          to be able to pass
-          this secret book down to future generations with the assurance that it will not get destroyed or lost?
-          Worry no more! Secret Family Recipes is here to make sure all your beloved recipes are safe and still a
-          secret! this is the reason for this site!!!!
-        </p>
-       </div>
-    </section>
-
- <div class="btn-center">
-    <button type="button" name="button">
-      <a href="#">login</a>
-    </button>
-  </div>
-
-    <div class="midPageTxt">
-      <h2>Why use Secret Family Cookbook?</h2>
-    </div>
-  
-    <div class="artsBox">
-      <article class="Access">
-        <img src="" alt="">
-        <h3>Access Your Recipes Online, Any Time</h3>
-        <p>
-          First and foremost our site is a hub for all your recipes!
-          Be it passed down through word of mouth or scribed in
-          old cookbooks, preserve them here with our convenient app.
-        </p>
-      </article>
+<div class= "hero">
+   <div class= "overlay">
     
 
-    <footer>
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-google"></a>
-      <a href="#" class="fa fa-linkedin"></a>
-    </footer>
+    <header>   
+      <nav>
+        <ul>
+        <li><a href= "home.html">Home</a></li>
+        <li><a href= "#"></a></li>
+        <li><a href= "#"></a></li>
+        <li><a href= "#"></a></li>
+        <li><a href= "about.html">About</a></li>
+        <li><a href= "#">Contact</a></li>
+          <li>
+          <div>
+        <a href="#home"><img class="logo" src="img/logo-for-recipe.png" alt="logo"></a>
+         </div>
+        </li>
+      </ul>
+    </nav> 
+  
+  <div class= "head-content">
+    <div class= "header-left">
+      <div>
+    <h1>
+      <div>
+        Where<br>
+        <span>Family</span><br>
+        Lives<br>
+      </div> 
+    </h1>
+    </div>
+  
+     <button><a href="#">Get Started</a></button>
+  </div>
+    
+      <div class= "header-right">
+        <img src="img/waffles-2190961_640-2.jpg" alt="waffles">
+      </div>
+    </div>
+  </header>
+  
+ 
+  <footer>
+    ©Copyright Secret Family 2020
+  </footer>
+
+   </div>
+</div>
+
 </body>
 </html>
