--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <link href="css/reset.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
