fixed the about css into the index css and refixed my animations to go into less. sorry if not all media query doesnt work.

--- a/about.html
+++ b/about.html
@@ -8,16 +8,17 @@
 
   <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/about.css">
+  <!--<link rel="stylesheet" href="css/about.css">-->
   <link rel="stylesheet" href="css/media query.css">
+  <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
-    <div class="container">
+    <div class="intro">
         <header>
             <div class="navigation">
-                <img src="img/banner-1093909_640.jpg" alt="colorful circle banner">
+                <img src="img/banner-1093909_640.jpg" class="top-img" alt="colorful circle banner">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About Us</a>
@@ -26,9 +27,9 @@
                     <a href="">sign In</a>
                 </nav>
             </div>
-        <img src="img/banner-1093909_640.jpg" alt="colorful circle banner" class="top-image">
+        <img src="img/banner-1093909_640.jpg" class="top-img" alt="colorful circle banner" class="top-image">
         </header>
-        <section class="top-content">
+        <section class="lemon-head">
             <div class="text-container">
                 <h2>alex</h2>
                 <p> 
@@ -36,9 +37,9 @@
                     he also seems to be doing react for this site.
                 </p>
             </div>
-            <div class="text-container">
+            <div class="all-family">
                 <h2>kk</h2>
-                <p>
+                <p class= "kk">
                      she does react components for this site.
                 </p>
             </div>
